--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/dt_books_orders
-spring.datasource.username=pguser
-spring.datasource.password=p@ssworD!
+spring.datasource.url=jdbc:postgresql://${DT_DB_SERVER:localhost}:${DT_DB_PORT:5432}/${DT_DB_NAME:dt_books_orders}
+spring.datasource.username=${DT_DB_USER:pguser}
+spring.datasource.password=${DT_DB_PASS:p@ssworD!}
 
 
 spring.sql.init.mode=always
@@ -13,12 +13,17 @@ spring.sql.init.continue-on-error=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-server.port=8085
+server.port=${DT_SERVER_PORT:8085}
 
-http.service.storage=http://localhost:8084/api/v1/storage
-http.service.books=http://localhost:8082/api/v1/books
-http.service.clients=http://localhost:8081/api/v1/clients
-http.service.payment=http://localhost:8086/api/v1/payment
+http.service.clients=${DT_CLIENTS_SERVER_URL:http://localhost:8081/api/v1/clients}
+http.service.books=${DT_BOOKS_SERVER_URL:http://localhost:8082/api/v1/books}
+http.service.storage=${DT_STORAGE_SERVER_URL:http://localhost:8084/api/v1/storage}
+http.service.payment=${DT_PAYMENT_SERVER_URL:http://localhost:8086/api/v1/payment}
 
-added.workload.cpu=0x7fffffff
-added.workload.ram=512
+added.workload.cpu=${DT_ADDED_WORKLOAD_CPU:0x7fffffff}
+added.workload.ram=${DT_ADDED_WORKLOAD_RAM:512}
+
+
+
+
+
