--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://${DT_DB_SERVER:localhost}:${DT_DB_PORT:5432}/${DT_DB_NAME:dt_books_orders}
-spring.datasource.username=${DT_DB_USER:pguser}
-spring.datasource.password=${DT_DB_PASS:p@ssworD!}
+spring.datasource.url=jdbc:postgresql://${DT_PG_SERVER:localhost}:${DT_PG_PORT:5432}/${DT_PG_DBNAME:dt_books_orders}
+spring.datasource.username=${DT_PG_USER:pguser}
+spring.datasource.password=${DT_PG_PASS:p@ssworD!}
 
 
 spring.sql.init.mode=always
@@ -15,13 +15,7 @@ logging.level.org.hibernate.type=TRACE
 
 server.port=${DT_SERVER_PORT:8085}
 
-http.service.clients=${DT_CLIENTS_SERVER_URL:http://localhost:8081/api/v1/clients}
-http.service.books=${DT_BOOKS_SERVER_URL:http://localhost:8082/api/v1/books}
-http.service.storage=${DT_STORAGE_SERVER_URL:http://localhost:8084/api/v1/storage}
-http.service.payment=${DT_PAYMENT_SERVER_URL:http://localhost:8086/api/v1/payment}
-
-
-
-
-
-
+http.service.clients=http://${DT_CLIENTS_SERVER:localhost:8081}/api/v1/clients
+http.service.books=http://${DT_BOOKS_SERVER:localhost:8082}/api/v1/books
+http.service.storage=http://${DT_STORAGE_SERVER:localhost:8084}/api/v1/storage
+http.service.payment=http://${DT_PAYMENT_SERVER:localhost:8086}/api/v1/payment
