--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.sql.init.continue-on-error=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
+service.version=1.0.0
+service.date=Feb-05-2023
 server.port=${DT_SERVER_PORT:8085}
 
 http.service.clients=http://${DT_CLIENTS_SERVER:localhost:8081}/api/v1/clients
